fix: header bar overlap

--- a/client/web/src/app/modules/platform/platform.component.scss
+++ b/client/web/src/app/modules/platform/platform.component.scss
@@ -92,5 +92,5 @@ ion-accordion {
 }
 
 .ion-page {
-  margin-top: 26px;
+  // margin-top: 26px;
 }
